<?xml version="1.0"?>
<package format="2">
  <name>robomaster_s1_driver</name>
  <version>0.0.0</version>
  <description>The robomaster_s1_driver package</description>
  <maintainer email="sgrsn1711@gmail.com">main</maintainer>
  <license>MIT</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
</package>
